--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
 
         <!--小青的Activity-->
         <activity android:name=".travel.search.TravelSearchAty"/>
+
+        <!--静雯的Activity-->
+        <activity android:name=".picture.details.DetailsActivity"/>
     </application>
 
 </manifest>
