--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".music.hotmusician.HotMusicianActivity"/>
+        <service android:name=".music.playnotify.PlayService"/>
 
         <!--小青的Activity-->
         <activity android:name=".travel.search.TravelSearchAty"/>
