--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
             </intent-filter>
         </activity>
 
+        <!--国冰冰 -->
+        <activity android:name=".news.headline.HeadLinesContentActivity"/>
         <!--小青的Activity-->
         <activity android:name=".travel.search.TravelSearchAty"/>
     </application>
