--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     compile files('libs/okhttp-3.3.1.jar')
     compile files('libs/okio-1.7.0.jar')
     compile files('libs/rxandroid-1.2.0.jar')
+    compile 'com.github.zzz40500:android-shapeLoadingView:1.0.3.2'
+
 //    compile files('libs/rxjava-1.1.6.jar')
 
 //RX JAVA 小青
